# eleva

./: .gitignore  Eléva.postman_collection.json  LICENSE  README.md  commands.txt  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env.docker.example  Dockerfile  README.md  create_super_admin.py  run.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_add_documents.py  45bc5e0d1181_add_role_to_user_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  documents.py  quizzes.py  subjects.py  users.py
backend/app/core/: README.md  admin_dependencies.py  config.py  dependencies.py  security.py
backend/app/crud/: document.py  subject.py  user.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: document.py  subject.py  user.py
backend/app/schemas/: admin.py  auth.py  document.py  quiz.py  subject.py  user.py
backend/app/services/: document_parser.py  document_retrieval.py  embedding_service.py  quiz_explanation.py  quiz_generation.py  text_chunker.py
backend/app/services/api_providers/: base_client.py  exceptions.py  (+2 more)
backend/docker/: entrypoint.sh
docs/: CORS.md  ProfilePage.md  TODO.md  ai_quiz_explanations.md  ai_quiz_generation.md  alembic.md  docker-deployment.md  frontend_auth.md  pydantic.md  quiz_refactor_report.md  sqlalchemy_async_migration_guide.md  tsconfig_tsconfignode.md
frontend/: .dockerignore  .env.docker.example  Dockerfile  eslint.config.js  index.css  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/constants/: subjects.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SubjectDetailPage.tsx  SubjectsPage.tsx
frontend/src/services/: api.ts  auth.ts  documents.ts  profile.ts  quizzes.ts  subjects.ts
frontend/src/store/: authStore.ts  documentsStore.ts
frontend/src/types/: index.ts
(+25 files in other folders)
