[project]
name = "eleva"
version = "0.1.0"
description = ""
authors = [
    {name = "GiacomoPracucci",email = "giacomo.pracucci8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "libpass (>=1.9.1.post0,<2.0.0)",
    "boto3 (>=1.40.2,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "alembic (>=1.16.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
