[project]
name = "eleva"
version = "0.1.0"
description = ""
authors = [
    {name = "GiacomoPracucci",email = "giacomo.pracucci8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "libpass (>=1.9.1.post0,<2.0.0)",
    "boto3 (>=1.40.2,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "openai (>=1.101.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
